app/javascript/src/styles/common/dtext.scss
@import "../base/000_vars.scss";

div.prose {
  line-height: 1.4em;

  h1, h2, h3 {
    line-height: 1em;
  }

  h1 {
    font-size: $dtext_h1_size;
    padding: $h1_padding;
  }

  h2 {
    font-size: $dtext_h2_size;
    padding: $h2_padding;
  }

  h3 {
    font-size: $dtext_h3_size;
    padding: $h3_padding;
  }

  h4 {
    font-size: $dtext_h4_size;
    padding: $h4_padding;
  }

  h5 {
    font-size: $dtext_h5_size;
    padding: $h4_padding;
  }

  h6 {
    font-size: $dtext_h6_size;
    padding: $h4_padding;
  }

  ul {
    margin-left: 1em;
    margin-bottom: 1em;

    ul {
      margin-bottom: 0;
    }
  }

  li {
    list-style-type: disc;
  }

  pre {
    font-family: monospace;
    font-size: 1.2em;
    margin: 0.5em 0;
    padding: 0.5em 1em;
    background: var(--dtext-code-background);
    white-space: pre-wrap;
  }

  blockquote {
    margin-bottom: 1em;
    padding: 1em 1em 0.2em;
    border: var(--dtext-blockquote-border);
    background: var(--dtext-blockquote-background);
  }

  code {
    font-family: monospace;
    background: var(--dtext-code-background);
  }

  .tn {
    font-size: 0.8em;
    color: var(--muted-text-color);
  }

  div.expandable {
    margin-bottom: 1em;
    border: var(--dtext-expand-border);
  }

  div.expandable-header {
    padding: 0.4em;

    span {
      margin-right: 0.5em;
      font-weight: bold;
    }
  }

  div.expandable-content {
    display: none;
    padding: 0.4em;
    border-top: 1px solid var(--dtext-expand-border-color);

    > :last-child {
      margin-bottom: 0;
    }
  }

  a.dtext-named-external-link::after {
    // https://fontawesome.com/icons/external-link-alt?style=solid
    @include fa-solid-icon("\f35d");

    font-size: 0.6em;
    padding: 0 0.2em 0 0.3em;
    vertical-align: 1px;
  }

  a.dtext-wiki-does-not-exist, a.dtext-tag-does-not-exist, a.dtext-artist-does-not-exist {
    text-decoration: dotted underline;
  }

  .spoiler:not(:hover), .spoiler:not(:hover) * {
    color: transparent !important;
  }

  .spoiler:hover {
    color: var(--dtext-spoiler-hover-color);
  }

  .spoiler {
    background: var(--dtext-spoiler-background-color);
  }
}

// avoid empty gaps beneath dtext blocks in table rows.
table td div.prose > *:last-child {
  margin-bottom: 0;
}

div.dtext-preview {
  display: none;

  ul {
    margin-left: 1em;
  }
}

div#dtext-help {
  td {
    > *, div.spoiler p {
      margin: 0;
    }

    h1, h6 {
      padding: 0;
    }
  }

  #dtext-help-footnote {
    margin: 1em 0 0 0;
  }
}

